tests/rosetta/transpiler/C/brilliant-numbers.c
// Generated by Mochi 0.10.32 on 2025-07-31 12:13 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <malloc.h>

size_t primesUpTo_len;
size_t sortInts_len;

size_t _slice_int_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(int v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%d", v);
    return strdup(buf);
}

typedef struct { const char **keys; const char **vals; size_t len; } MapSS;

static const char* map_get_ss(const char *keys[], const char *vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return "";
}

static int* list_append_int(int *arr, size_t *len, int val) {
    arr = realloc(arr, (*len + 1) * sizeof(int));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
#include <stdlib.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    struct mallinfo mi = mallinfo();
    return (long long)mi.uordblks;
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

static int* _slice_int(const int *arr, size_t len, int start, int end, size_t *out_len) {
    if (start < 0) start = 0;
    if ((size_t)end > len) end = len;
    if (start > end) start = end;
    size_t n = end - start;
    int *res = NULL;
    if (n) {
        res = malloc(n * sizeof(int));
        memcpy(res, arr + start, n * sizeof(int));
    }
    *out_len = n;
    _slice_int_len = n;
    return res;
}

typedef struct Anon1 Anon1;

struct Anon1 {
    int *bc;
    size_t bc_len;
    int next;
};

int * primesUpTo(int n);
int * sortInts(int * xs, size_t xs_len);
const char* commatize(int n);
Anon1 getBrilliant(int digits, int limit, int countOnly);
int user_main();
int main(void);

int * primesUpTo(int n) {
    int *sieve = NULL;
    size_t sieve_len = 0;
    int i = 0LL;
    while (i <= n) {
        sieve = list_append_int(sieve, &sieve_len, 1LL);
        i = i + 1LL;
    }
    int p = 2LL;
    while ((p * p) <= n) {
        if (sieve[(int)(p)]) {
            int m = p * p;
            while (m <= n) {
                sieve[(int)(m)] = 0LL;
                m = m + p;
            }
        }
        p = p + 1LL;
    }
    int *res = NULL;
    size_t res_len = 0;
    int x = 2LL;
    while (x <= n) {
        if (sieve[(int)(x)]) {
            res = list_append_int(res, &res_len, x);
        }
        x = x + 1LL;
    }
    return primesUpTo_len = res_len, res;
}

int * sortInts(int * xs, size_t xs_len) {
    int *res = NULL;
    size_t res_len = 0;
    int *tmp = xs;
    size_t tmp_len = xs_len;
    while (tmp_len > 0LL) {
        int min = tmp[(int)(0LL)];
        int idx = 0LL;
        int i = 1LL;
        while (i < tmp_len) {
            if (tmp[(int)(i)] < min) {
                min = tmp[(int)(i)];
                idx = i;
            }
            i = i + 1LL;
        }
        res = list_append_int(res, &res_len, min);
        int *out = NULL;
        size_t out_len = 0;
        int j = 0LL;
        while (j < tmp_len) {
            if (j != idx) {
                out = list_append_int(out, &out_len, tmp[(int)(j)]);
            }
            j = j + 1LL;
        }
        tmp = out;
    }
    return sortInts_len = res_len, res;
}

const char* commatize(int n) {
    const char* s = str_int(n);
    int i = strlen(s) - 3LL;
    while (i >= 1LL) {
        s = str_concat(str_concat(_substring(s, 0LL, i), ","), _substring(s, i, strlen(s)));
        i = i - 3LL;
    }
    return s;
}

Anon1 getBrilliant(int digits, int limit, int countOnly) {
    int *brilliant = NULL;
    size_t brilliant_len = 0;
    int count = 0LL;
    int pow = 1LL;
    int next = 999999999999999LL;
    int k = 1LL;
    while (k <= digits) {
        int *s = NULL;
        size_t s_len = 0;
        for (size_t __i = 0; __i < primes_len; __i++) {
            int p = primes[__i];
            if (p >= (pow * 10LL)) {
                break;
            }
            if (p > pow) {
                s = list_append_int(s, &s_len, p);
            }
        }
        int i = 0LL;
        while (i < s_len) {
            int j = i;
            while (j < s_len) {
                int prod = s[(int)(i)] * s[(int)(j)];
                if (prod < limit) {
                    if (countOnly) {
                        count = count + 1LL;
                    } else {
                        brilliant = list_append_int(brilliant, &brilliant_len, prod);
                    }
                } else {
                    if (prod < next) {
                        next = prod;
                    }
                    break;
                }
                j = j + 1LL;
            }
            i = i + 1LL;
        }
        pow = pow * 10LL;
        k = k + 1LL;
    }
    if (countOnly) {
        return (Anon1){.bc = count, .bc_len = count_len, .next = next};
    }
    return (Anon1){.bc = brilliant, .bc_len = brilliant_len, .next = next};
}

int user_main() {
    puts("First 100 brilliant numbers:");
    Anon1 r = getBrilliant(2LL, 10000LL, 0LL);
    int *br = sortInts(r.bc, r.bc_len);
    size_t br_len = sortInts_len;
    br = _slice_int(br, br_len, 0LL, 100LL, &(_slice_int_len));
    int i = 0LL;
    while (i < br_len) {
        printf("%s %d\n", str_concat(str_int(br[(int)(i)]), " "), 0LL);
        if (((i + 1LL) % 10LL) == 0LL) {
            printf("%s %d\n", "", 1LL);
        }
        i = i + 1LL;
    }
    printf("%s %d\n", "", 1LL);
    int k = 1LL;
    while (k <= 13LL) {
        int limit = pow(10LL, k);
        Anon1 r2 = getBrilliant(k, limit, 1LL);
        int *total = r2.bc;
        size_t total_len = r2.bc_len;
        int next = r2.next;
        const char* climit = commatize(limit);
        const char* ctotal = commatize(total + 1LL);
        const char* cnext = commatize(next);
        puts(str_concat(str_concat(str_concat(str_concat(str_concat("First >= ", climit.padStart), " is "), ctotal.padStart), " in the series: "), cnext.padStart));
        k = k + 1LL;
    }
}

int main(void) {
    {
        long long __start = _now();
        long long __mem_start = _mem();
        int *primes = primesUpTo(3200000LL);
        size_t primes_len = primesUpTo_len;
        long long __end = _now();
        long long __mem_end = _mem();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = __mem_end - __mem_start;
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
